2004-01-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/test/classes/dg_test.py (DGTest._RunDGTest): Fix formatting
	of paths to match DejaGNU.
	(DGTest._DGBogus): Fix copy/paste error in docstring.
	(DGTest.__ExpectDiagnostic): Use "" rather than 'None' to denote
	empty comment, to match DejaGNU.

2004-03-02  Nathaniel Smith  <njs@codesourcery.com>

	* qm/test/classes/explicit_suite.py (arguments): Fix formatting
	of description for 'is_implicit'.

2004-03-01  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (Executable.Spawn): Under Windows, convert all
	environment variables to Unicode if any of them are Unicode.
	* NEWS: Mention this improvement.

2004-02-27  Mark Mitchell  <mark@codesourcery.com>

	* setup.py: Install both "qmtest" and "qmtest.py" on all systems.

2004-02-20  Nathaniel Smith  <njs@codesourcery.com>

	* qm/common.py (format_time_iso): Make argument default to
	current time.
	* qm/test/execution_engine.py (ExecutionEngine.Run): Don't pass
	explicit argument to 'format_time_iso'.
	(ExecutionEngine._WriteInitialAnnotations): Likewise.
	
	* qm/test/target.py (qm.common): Import.
	(Target.RunTest): Record start and end times.

	* qm/test/classes/tet_stream.py (TETStream._ExtractTime): New
	function.
	(TETStream._WriteTCStart): Use it.
	(TETStream._WriteDejaGNUResult): Likewise.
	(TETStream._WriteTestResult): Likewise.

2004-02-19  Nathaniel Smith  <njs@codesourcery.com>

	* qm/common.py (parse_time_iso): New function.
	* qm/test/classes/tet_stream.py: New file.
	* qm/test/classes/classes.qmc (tet_stream.TETStream): Add.

2004-02-18  Mark Mitchell  <mark@codesourcery.com>

	* qm/__version.py: Advance to 2.2.0.

	* qm/executable.py (TimeoutExecutable.Run): Handle failure to
	locate the executable file robustly under Windows.

2004-02-15  Nathaniel Smith  <njs@codesourcery.com>

	* qm/common.py (open_temporary_file_fd): Change default suffix to
	empty string.
	(open_temporary_file): Likewise.